Fixing spacing of contact info

--- a/index.css
+++ b/index.css
@@ -14,8 +14,8 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    border-top: 2px solid #395c6b;
-    border-bottom: 2px solid #395c6b;
+    border-top: 3px solid #395c6b;
+    border-bottom: 3px solid #395c6b;
 }
 
 #headshot{
